--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>只因你太美</title>
 </head>
 <body>
-    123456
+    食不食油饼
 </body>
 </html>
