--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container-right">
             <!-- 每个 blog 代表一篇博客 -->
             <div class="blog">
-                <div class="title"><a href="file/frp.md">FRP内网穿透</a></div>
+                <div class="title"><a href="file/frp.html">FRP内网穿透</a></div>
                 <div class="date">一款开源免费的内外穿透工具</div>
             </div>
             <div class="blog">
