--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <div class="date">一款开源免费的内外穿透工具</div>
             </div>
             <div class="blog">
-                <div class="title"><a href="file/ssl.md">SSL证书</a></div>
+                <div class="title"><a href="file/ssl.html">SSL证书</a></div>
                 <div class="date">给你的网站加上https，让访问更安全</div>
             </div>
             <div class="blog">
-                <div class="title"><a href="file/ufw.md">UFW</a></div>
+                <div class="title"><a href="file/ufw.html">UFW</a></div>
                 <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
             </div>
         </div>
