--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <div class="title"><a href="file/ufw.html">UFW</a></div>
                 <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
             </div>
+            <div class="blog">
+                <div class="title"><a href="file/base.html">base64</a></div>
+                <div class="date">在Windows CMD中使用Base64编解码  </div>
+            </div>
         </div>
     </div>
 </body>
