--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <!-------------------------------------------------------------->
             <div class="blog">
-                <div class="title"><a href="file/base.html">base64</a></div>
+                <div class="title"><a href="file/base64.html">base64</a></div>
                 <div class="date">在Windows CMD中使用Base64编解码  </div>
             </div>
             <!-------------------------------------------------------------->
