--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title">只因你太美</span>
+        <span class="title">一只小坤坤</span>
          <!-- 使用 span 把左右两侧的元素给撑开 -->
          <span class="spacer"></span>
         <a href="https://google.com">Google</a>
