--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>食不食油饼</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/blog_list.css">
+    <base target="_blank">
 </head>
 <body>
     <!-- 导航栏 -->
@@ -15,7 +16,7 @@
          <!-- 使用 span 把左右两侧的元素给撑开 -->
          <span class="spacer"></span>
         <a href="https://google.com">Google</a>
-        <a href="https://github.com/">GitHub</a>
+        <a href="https://github.com">GitHub</a>
     
     </div>
     <!-- 版心 -->
@@ -35,29 +36,29 @@
                 
             </div>
         </div>
-     <!-- 右侧区域，显示博客列表 -->
+     <!-- 中间区域，显示博客列表 -->
         <div class="container-right">
-            <!-------------------------------------------------------------->
+            <!-- ------------------------------------------------------------------------------------ -->
             <div class="blog">
                 <div class="title"><a href="file/frp.html">FRP内网穿透</a></div>
                 <div class="date">一款开源免费的内外穿透工具</div>
             </div>
-            <!-------------------------------------------------------------->
+            <!-- ------------------------------------------------------------------------------------ -->
             <div class="blog">
                 <div class="title"><a href="file/ssl.html">SSL证书</a></div>
                 <div class="date">给你的网站加上https，让访问更安全</div>
             </div>
-            <!-------------------------------------------------------------->
+            <!-- ------------------------------------------------------------------------------------ -->
             <div class="blog">
                 <div class="title"><a href="file/ufw.html">UFW</a></div>
                 <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
             </div>
-            <!-------------------------------------------------------------->
+            <!-- ------------------------------------------------------------------------------------ -->
             <div class="blog">
                 <div class="title"><a href="file/base64.html">base64</a></div>
                 <div class="date">在Windows CMD中使用Base64编解码  </div>
             </div>
-            <!-------------------------------------------------------------->
+            <!-- ------------------------------------------------------------------------------------ -->
         </div>
     </div>
 </body>
