--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食不食油饼</title>
     <link rel="stylesheet" href="css/common.css">
@@ -15,8 +15,6 @@
         <span class="title">一只小坤坤</span>
          <!-- 使用 span 把左右两侧的元素给撑开 -->
          <span class="spacer"></span>
-        <a href="https://google.com">Google</a>
-        <a href="https://github.com">GitHub</a>
     
     </div>
     <!-- 版心 -->
