--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- ------------------------------------------------------------------------------------ -->
             <div class="blog">
                 <div class="title"><a href="file/tvbox/tvbox.html">TVbox</a></div>
-                <div class="date">TVbox是一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，观看可能需要网盘扫码和网盘VIP</div>
+                <div class="date">一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，可能需要网盘扫码和网盘VIP</div>
             </div>
             <!-- ------------------------------------------------------------------------------------ -->
         </div>
