--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>食不食油饼</title>
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/blog_list.css">
     <base target="_blank">
 </head>
 <body>
@@ -36,32 +35,9 @@
         </div>
      <!-- 中间区域，显示博客列表 -->
         <div class="container-right">
-            <!-- ------------------------------------------------------------------------------------ -->
-            <div class="blog">
-                <div class="title"><a href="file/frp.html">FRP内网穿透</a></div>
-                <div class="date">一款开源免费的内外穿透工具</div>
-            </div>
-            <!-- ------------------------------------------------------------------------------------ -->
-            <div class="blog">
-                <div class="title"><a href="file/ssl.html">SSL证书</a></div>
-                <div class="date">给你的网站加上https，让访问更安全</div>
-            </div>
-            <!-- ------------------------------------------------------------------------------------ -->
-            <div class="blog">
-                <div class="title"><a href="file/ufw.html">UFW</a></div>
-                <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
-            </div>
-            <!-- ------------------------------------------------------------------------------------ -->
-            <div class="blog">
-                <div class="title"><a href="file/base64.html">base64</a></div>
-                <div class="date">在Windows CMD中使用Base64编解码  </div>
-            </div>
-            <!-- ------------------------------------------------------------------------------------ -->
-            <div class="blog">
-                <div class="title"><a href="file/tvbox/tvbox.html">TVbox</a></div>
-                <div class="date">一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，可能需要网盘扫码和网盘VIP</div>
-            </div>
-            <!-- ------------------------------------------------------------------------------------ -->
+            <iframe src="blog_list.html" width="100%" height="100%" frameborder="0">
+                您的浏览器不支持iframe，请升级
+            </iframe>
         </div>
     </div>
 </body>
