--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>食不食油饼</title>
     <link rel="stylesheet" href="css/common.css">
     <base target="_blank">
+    <script type="text/javascript">
+         if(/Android|webOS| iPhone | iPad | iPod |BlackBerry|opera mini|opera mobile|appleWebkit.*mobile|mobile/i.test(navigator.userAgent)) {
+         window.location.replace("mb.html");}
+    </script>
 </head>
 <body>
     <!-- 导航栏 -->
