--- a/mb.html
+++ b/mb.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食不食油饼</title>
     <link rel="stylesheet" href="css/mb.css">
     <base target="_blank">
