--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title">一只小坤坤</span>
+        <span class="title"><h3>一只小坤坤</h3></span>
          <!-- 使用 span 把左右两侧的元素给撑开 -->
          <span class="spacer"></span>
     
