--- a/mb.html
+++ b/mb.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title">一只小坤坤</span>
+        <span class="title"><h3>一只小坤坤</h3></span>
     
     </div>
     <!-- 版心 -->
