--- a/blog_list.html
+++ b/blog_list.html
@@ -11,29 +11,28 @@
     <a href="file/frp.html"><div class="blog">
         <div class="title">FRP内网穿透</div>
         <div class="date">一款开源免费的内外穿透工具</div>
-    </div></a>
+    </div></a><div class="line"></div>
     <!-- ------------------------------------------------------------------------------------ -->
     <a href="file/ssl.html"><div class="blog">
         <div class="title">SSL证书</div>
         <div class="date">给你的网站加上https，让访问更安全</div>
-    </div></a>
+    </div></a><div class="line"></div>
     <!-- ------------------------------------------------------------------------------------ -->
     <a href="file/ufw.html"><div class="blog">
         <div class="title">UFW</div>
         <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
-    </div></a>
+    </div></a><div class="line"></div>
     <!-- ------------------------------------------------------------------------------------ -->
     <a href="file/base64.html"><div class="blog">
         <div class="title">base64</div>
         <div class="date">在Windows CMD中使用Base64编解码  </div>
-    </div></a>
+    </div></a><div class="line"></div>
     <!-- ------------------------------------------------------------------------------------ -->
     <a href="file/tvbox/tvbox.html"><div class="blog">
         <div class="title">TVbox</div>
         <div class="date">一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，可能需要网盘扫码和网盘VIP</div>
-    </div></a>
+    </div></a><div class="line"></div>
     <!-- ------------------------------------------------------------------------------------ -->
-
     
 </body>
 </html>
