--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title"><h3>一只小坤坤</h3></span>
+        <span class="title"><h3>坤坤Blog</h3></span>
     </div>
     <!-- 版心 -->
     <div class="container">
