--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <!-- 用户名 -->
                 <h3>食不食油饼</h3>
                 <!-- 其它信息 -->
-                <h4><a href="https://www.bing.com/">必应</a></h4>
                 <h4><a href="https://www.bilibili.com/">Bilibili</a></h4>
-                <h4><a href="https://www.baidu.com/">百度一下</a></h4>
+                <h4><a href="https://www.bing.com/">必应搜索</a></h4>
+                <h4><a href="https://www.baidu.com/">百度搜索</a></h4>
                 <!-- 文章分类 -->
                 
                 
