--- a/#/index.html
+++ b/#/index.html
@@ -4,19 +4,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食不食油饼</title>
-    <link rel="stylesheet" href="css/mb.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../css/mb.css">
     <base target="_blank">
 </head>
 <body>
     <!-- 导航栏 -->
     <div class="nav">
-        <img src="image/head.jpg" alt="">
-        <span class="title"><h3>一只小坤坤</h3></span>
+        <img src="../image/head.jpg" alt="">
+        <span class="title"><h3>ikun</h3></span>
     
     </div>
     <!-- 版心 -->
     <div class="container">
-        <iframe src="blog_list.html" width="100%" height="100%" frameborder="0">
+        <iframe src="../list.html" width="100%" height="100%" frameborder="0">
                 您的浏览器不支持iframe，请升级
         </iframe>
     </div>
