--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <base target="_blank">
     <script type="text/javascript">
          if(/Android|webOS| iPhone | iPad | iPod |BlackBerry|opera mini|opera mobile|appleWebkit.*mobile|mobile/i.test(navigator.userAgent)) {
-         window.location.replace("mb.html");}
+         window.location.replace("#/index.html");}
     </script>
 </head>
 <body>
