--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <base target="_blank">
     <title>Document</title>
-    <link rel="stylesheet" href="css/blog_list.css">
+    <link rel="stylesheet" href="css/list.css">
 </head>
 <body>
     <a href="file/frp.html"><div class="blog">
