--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- 用户详情 -->
             <div class="card">
                 <!-- 用户的头像 -->
-                <img src="image/head.jpg" alt="">
+                <img src="image/kk.jpg" alt="">
                 <!-- 用户名 -->
                 <h3>食不食油饼</h3>
                 <!-- 其它信息 -->
