--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title"><h3>ikun</h3></span>
+        <span class="title"><h3><a href="index.html" target="_self">ikun主页</a></h3></span>
     </div>
     <!-- 版心 -->
     <div class="container">
