--- a/html/x.html
+++ b/html/x.html
@@ -11,18 +11,17 @@
 <body>
     <div class="markdown-body">
         <!-- 粘贴到下面 -->
-        <h3>X-UI搭建</h3>
-        <p>FinalShell SSH工具 <a href="https://www.hostbuf.com/t/988.html" rel="nofollow">下载</a><br>
-        系统&gt;Ubuntu/Debian</p>
-        <pre><code>apt update -y &amp;amp;&amp;amp; apt install -y curl  
-        bash &amp;lt;(curl -Ls https://raw.githubusercontent.com/FranzKafkaYu/x-ui/master/install.sh) 0.3.4.4   
-        </code></pre>
-        <h3>开启BBR加速</h3>
-        <pre><code>wget -N --no-check-certificate &amp;#34;https://github.000060000.xyz/tcpx.sh&amp;#34; &amp;amp;&amp;amp; chmod +x tcpx.sh &amp;amp;&amp;amp; ./tcpx.sh
-        </code></pre>
-        <p><a href="https://bulianglin.com/archives/nicename.html" rel="nofollow">视频教程</a></p>
-
-
+        <h3 id="xui">X-UI搭建</h3>
+<p>FinalShell SSH工具 <a href="https://www.hostbuf.com/t/988.html">下载</a><br />
+系统Ubuntu/Debian</p>
+<pre><code>apt update -y &amp;&amp; apt install -y curl           
+bash &lt;(curl -Ls https://raw.githubusercontent.com/FranzKafkaYu/x-ui/master/install.sh) 0.3.4.4   
+</code></pre>
+<h3 id="bbr">开启BBR加速</h3>
+<pre><code>wget -N --no-check-certificate "https://github.000060000.xyz/tcpx.sh" &amp;&amp; chmod +x tcpx.sh &amp;&amp; ./tcpx.sh  
+</code></pre>
+<p><br />
+<a href="https://bulianglin.com/archives/nicename.html">youtube视频</a></p>
     </div>
 </body>
 </html>
