--- a/html/x.html
+++ b/html/x.html
@@ -13,15 +13,13 @@
         <!-- 粘贴到下面 -->
         <h3 id="xui">X-UI搭建</h3>
 <p>FinalShell SSH工具 <a href="https://www.hostbuf.com/t/988.html">下载</a><br />
-系统Ubuntu/Debian</p>
-<pre><code>apt update -y &amp;&amp; apt install -y curl           
-bash &lt;(curl -Ls https://raw.githubusercontent.com/FranzKafkaYu/x-ui/master/install.sh) 0.3.4.4   
-</code></pre>
+系统Ubuntu/Debian<br />
+<code>apt update -y &amp;&amp; apt install -y curl</code><br />
+<code>bash &lt;(curl -Ls https://raw.githubusercontent.com/FranzKafkaYu/x-ui/master/install.sh) 0.3.4.4</code>  </p>
 <h3 id="bbr">开启BBR加速</h3>
-<pre><code>wget -N --no-check-certificate "https://github.000060000.xyz/tcpx.sh" &amp;&amp; chmod +x tcpx.sh &amp;&amp; ./tcpx.sh  
-</code></pre>
-<p><br />
-<a href="https://bulianglin.com/archives/nicename.html">youtube视频</a></p>
+<p><code>wget -N --no-check-certificate "https://github.000060000.xyz/tcpx.sh" &amp;&amp; chmod +x tcpx.sh &amp;&amp; ./tcpx.sh</code><br />
+<a href="https://bulianglin.com/archives/nicename.html">视频</a><br />
+<a href="https://github.com/FranzKafkaYu/x-ui">GitHub</a></p>
     </div>
 </body>
 </html>
