--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
         </div>
      <!-- 中间区域，显示博客列表 -->
         <div class="container-right">
-            <iframe src="list.html" width="100%" height="100%" frameborder="0">
-                您的浏览器不支持iframe，请升级
-            </iframe>
+            <div id="shared-content"></div>
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                  fetch("list.html")
+                    .then((response) => response.text())
+                    .then((html) => {
+                      document.getElementById("shared-content").innerHTML = html;
+                    });
+                });
+            </script>
         </div>
     </div>
 </body>
