--- a/html/tvbox.html
+++ b/html/tvbox.html
@@ -20,16 +20,16 @@
         <h2 id="-1">使用方法</h2>
         <p>把安装包存到U盘插入电视上安装<br />
         安装完后还要配置接口才能使用  </p>
-        <h3 id="1">1.打开设置</h3>
-        <p><img src="../image/tvbox/1.jpg" alt="" />  </p>
+        <h3 id="1">1.打开软件设置</h3>
+        <p><img src="../image/tvbox/1.jpg" alt="" width="600"/>  </p>
         <h3 id="2">2.配置地址</h3>
-        <p><img src="../image/tvbox/2.jpg" alt="" />  </p>
+        <p><img src="../image/tvbox/2.jpg" alt="" width="600"/>  </p>
         <h3 id="3">3.用手机打开电视上的地址</h3>
-        <p><img src="../image/tvbox/3.jpg" alt="" />  </p>
+        <p><img src="../image/tvbox/3.jpg" alt="" width="600"/>  </p>
         <h3 id="4">4.手机上配置接口</h3>
         <h4 id="-2">先点击右下的设置，输入，确认。</h4>
         <p>个人使用的接口<code>http://www.xn--sss604efuw.com/tv</code><br />
-        <img src="../image/tvbox/4.jpg" alt="" />  </p>
+        <img src="../image/tvbox/4.jpg" alt="" width="600"/>  </p>
         <h3 id="5ok">5.电视上出现了你输入的接口，点确定，ok完成。</h3>
 
 
