--- a/html/frp.html
+++ b/html/frp.html
@@ -83,7 +83,7 @@ systemctl disable frps
 <pre><code>set ws=wscript.createobject("wscript.shell")  
 ws.run "frpc.bat /start",0
 </code></pre>
-<p>--双击启动<code>frpc.vbs</code>文件</p>击启动<code>frpc.vbs</code>文件</p>
+<p>--双击启动<code>frpc.vbs</code>文件</p>--点击启动<code>frpc.vbs</code>文件</p>
 
 
     </div>
