--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食不食油饼</title>
-    <link rel="stylesheet" href="css/common.css">
     <base target="_blank">
-    <script type="text/javascript">
-         if(/Android|webOS| iPhone | iPad | iPod |BlackBerry|opera mini|opera mobile|appleWebkit.*mobile|mobile/i.test(navigator.userAgent)) {
-         window.location.replace("mobile/");}
-    </script>
+    <link rel="stylesheet" media="screen and (max-width: 599px)" href="css\common-m.css">
+    <link rel="stylesheet" media="screen and (min-width: 600px)" href="css\common.css">
 </head>
 <body>
     <!-- 导航栏 -->
