--- a/html/123pan.html
+++ b/html/123pan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ikun</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../css/github-markdown.css">
+    <link rel="stylesheet" href="../css/markdown.css">
     <base target="_blank">
 </head>
 <body>
