--- a/html/frp.html
+++ b/html/frp.html
@@ -12,7 +12,7 @@
     <div class="markdown-body">
         <!-- 粘贴到下面 -->
         <h2 id="frphttpsgithubcomfatedierfrp">FRP软件 <a href="https://github.com/fatedier/frp">下载</a></h2>
-<h2 id="1fprstoml">1.服务端fprs.toml</h2>
+<h2 id="1fprstoml">1.服务端配置文件fprs.toml</h2>
 <pre><code>bindPort = 7788
 auth.method = "token"
 auth.token = "设置你的服务端token密码"
@@ -21,7 +21,7 @@ webServer.port = 7799
 webServer.user = "设置网页用户名"
 webServer.password = "设置网页密码"
 </code></pre>
-<h2 id="2fprctoml">2.客户端fprc.toml</h2>
+<h2 id="2fprctoml">2.客户端配置文件fprc.toml</h2>
 <pre><code>user = "name"
 serverAddr = "服务器地址"
 serverPort = 7788
