--- a/list.html
+++ b/list.html
@@ -31,7 +31,7 @@
         <div class="date">一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，可能需要网盘扫码和网盘VIP</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
-    <a href="html/123pan.html"><div class="blog">
+    <a href="https://github.com/QingJ01/123pan_unlock" target="_blank"><div class="blog">
         <div class="title">123云盘</div>
         <div class="date">解锁你的123云盘VIP，让体验更美好#Tampermonkey#脚本</div>
     </div></a>
