--- a/html/base64.html
+++ b/html/base64.html
@@ -11,12 +11,12 @@
 <body>
     <div class="markdown-body">
         <!-- 粘贴到下面 -->
-        <h2 id="windowscmdbase64">在Windows CMD中使用Base64编解码</h2>
-        <h3 id="1txtcmd2txt">创建1.txt然后输入内容，窗口内CMD执行命令得到2.txt</h3>
-        <h3 id="base64">要将文件编码为Base64，可以使用以下命令</h3>
-        <h3 id="certutilencode1txt2txt"><code>certutil -encode 1.txt 2.txt</code></h3>
-        <h3 id="base64-1">要将 Base64 编码的文件解码，可以使用以下命令：</h3>
-        <h3 id="certutildecode1txt2txt"><code>certutil -decode 1.txt 2.txt</code></h3>
+        <h2 >在Windows CMD中使用Base64编解码</h2>
+        <h3 >创建1.txt然后输入内容，窗口内CMD执行命令得到2.txt</h3>
+        <h3 >要将文件编码为Base64，可以使用以下命令</h3>
+        <h3 ><code>certutil -encode 1.txt 2.txt</code></h3>
+        <h3 >要将 Base64 编码的文件解码，可以使用以下命令：</h3>
+        <h3 ><code>certutil -decode 1.txt 2.txt</code></h3>
 
 
     </div>
