--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="aa"><a href="https://www.bilibili.com/">Bilibili</a></div>
                 <div class="aa"><a href="https://www.bing.com/">必应搜索</a></div>
                 <div class="aa"><a href="https://www.baidu.com/">百度搜索</a></div>
-                
+                <div class="aa"><a href="https://www.cloudflare.com/">Cloudflare</a></div>
+                <div class="aa"><a href="https://www.bing.com/translator/">微软翻译</a></div>
                 
             </div>
         </div>
