--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食不食油饼</title>
     <base target="_blank">
-    <link rel="stylesheet" media="screen and (max-width: 599px)" href="css\common-m.css">
-    <link rel="stylesheet" media="screen and (min-width: 600px)" href="css\common.css">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" href="c1.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" href="c2.css">
 </head>
 <body>
     <!-- 导航栏 -->
