--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="c3.css">
+    <link rel="stylesheet" href="css/list.css">
 </head>
 <body>
     <a href="html/frp.html"><div class="blog">
