--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="aa"><a href="https://www.bing.com/">必应搜索</a></div>
                 <div class="aa"><a href="https://www.baidu.com/">百度搜索</a></div>
                 <div class="aa"><a href="https://www.cloudflare.com/">Cloudflare</a></div>
+                <div class="aa"><a href="https://www.github.com/">GitHub</a></div>
                 <div class="aa"><a href="https://www.bing.com/translator/">微软翻译</a></div>
                 
             </div>
