--- a/html/tvbox.html
+++ b/html/tvbox.html
@@ -16,8 +16,8 @@
         <a href="https://github.com/o0HalfLife0o/TVBoxOSC/releases">https://github.com/o0HalfLife0o/TVBoxOSC/releases</a><br />
         <a href="https://github.com/cyao2q/files">https://github.com/cyao2q/files</a> </p>
         <p><a href="https://www.123684.com/s/4wHDVv-b8Bq3?提取码:mBrt">123云盘</a>提取码<code>mBrt</code>  </p>
-        <p>本地下载&nbsp;&nbsp;<a href="https://r2.855955.xyz/TVBox%E7%94%B5%E8%A7%86%E7%89%88.apk">电视版</a>&nbsp;&nbsp;
-                               <a href="https://r2.855955.xyz/OK%E5%BD%B1%E8%A7%86%E6%89%8B%E6%9C%BA%E7%89%88.apk">手机版</a></p>
+        <p>本地下载&nbsp;&nbsp;<a href="https://rr.855955.xyz/TVBox%E7%94%B5%E8%A7%86%E7%89%88.apk">电视版</a>&nbsp;&nbsp;
+                               <a href="https://rr.855955.xyz/OK%E5%BD%B1%E8%A7%86%E6%89%8B%E6%9C%BA%E7%89%88.apk">手机版</a></p>
         <h2 id="-1">使用方法</h2>
         <p>把安装包存到U盘插入电视上安装<br />
         安装完后还要配置接口才能使用  </p>
