--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                 <div class="aa"><a href="https://www.baidu.com/">百度搜索</a></div>
                 <div class="aa"><a href="https://www.cloudflare.com/">Cloudflare</a></div>
                 <div class="aa"><a href="https://www.github.com/">GitHub</a></div>
-                <div class="aa"><a href="https://www.bing.com/translator/">微软翻译</a></div>
-                
+                <div class="aa"><a href="https://www.bing.com/translator/">微软翻译</a></div>   
             </div>
+
+            <div class="aa1"><img alt="本站支持IPv6访问" src="image/6.svg"></div>
         </div>
      <!-- 中间区域，显示博客列表 -->
         <div class="container-right">
