--- a/list.html
+++ b/list.html
@@ -36,6 +36,10 @@
         <div class="date">解锁你的123云盘VIP，让体验更美好#Tampermonkey#脚本</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
-   
+    <a href="html/tbtool.html"><div class="blog">
+        <div class="title">图吧工具箱</div>
+        <div class="date">DIY爱好者的必备工具合集</div>
+    </div></a>
+    <!-- -----------------------分割线----------------------- --><div class="line"></div>
 </body>
 </html>
