--- a/list.html
+++ b/list.html
@@ -41,5 +41,10 @@
         <div class="date">DIY爱好者的必备工具合集</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <a href="html/xl7.html"><div class="blog">
+        <div class="title">迅雷7纯净版</div>
+        <div class="date">纯净，无广，下载不限速，体积轻巧</div>
+    </div></a>
+    <!-- -----------------------分割线----------------------- --><div class="line"></div>
 </body>
 </html>
