--- a/vd/3.html
+++ b/vd/3.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <link href="https://rr.855955.xyz/v/1.css" rel="stylesheet">
-    <script src="https://rr.855955.xyz/v/1.js"></script>    
+    <!-- <link href="https://rr.855955.xyz/v/1.css" rel="stylesheet"> -->
+    <!-- <script src="https://rr.855955.xyz/v/1.js"></script>     -->
 </head>
 <body>
     <div class="a">
