--- a/j/j.html
+++ b/j/j.html
@@ -22,9 +22,9 @@
 <body>
     <div class="vd">
         <video id="my-player" class="video-js"
-               controls preload="auto" poster="j/j.jpg" data-setup='{}'
+               controls preload="auto" poster="https://rr.855955.xyz/j.jpg" data-setup='{}'
                style="width: 100%; height: 100%; object-fit: contain;">
-            <source src="j/j.m3u8" type="application/x-mpegURL">
+            <source src="https://rr.855955.xyz/j/j.m3u8" type="application/x-mpegURL">
             </source>
             <p class="vjs-no-js">To view this video please enable JavaScript</p>
         </video>
