--- a/j/j.html
+++ b/j/j.html
@@ -22,7 +22,7 @@
 <body>
     <div class="vd">
         <video id="my-player" class="video-js"
-               controls preload="auto" poster="https://rr.855955.xyz/j.jpg" data-setup='{}'
+               controls preload="auto" poster="https://rr.855955.xyz/j/j.jpg" data-setup='{}'
                style="width: 100%; height: 100%; object-fit: contain;">
             <source src="https://rr.855955.xyz/j/j.m3u8" type="application/x-mpegURL">
             </source>
