--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <base target="_blank"> -->
     <link rel="stylesheet" media="screen and (min-width: 500px)" href="css/c1.css">
     <link rel="stylesheet" media="screen and (max-width: 499px)" href="css/c2.css">
-    <link rel="stylesheet" href="j/j.css">
+    <link rel="stylesheet" href="j/jj.css">
     
 
 </head>
@@ -26,14 +26,9 @@
                 <!-- 用户的头像 -->
                 <img src="image/kk.jpg" alt="">
                 <!-- 用户名 -->
-                <div class="aaa"><a href="#" id="open-popup"><h3>点击唱跳Rap</h3></a></div>
+                <div class="aaa"><a href="javascript:void(0)" id="playBtn"><h3>点击唱跳Rap</h3></a></div>
                      <!-- 弹窗内容 -->
-                <div id="overlay"></div>
-                <div id="popup">
-                <span id="popup-close">×</span>
-                <iframe class="if" src="j/j.html"></iframe>
-                </div>
-                <script src="j/j.js"></script>
+                
                 <!-- 其它信息 -->
                 <div class="aa"><a href="https://www.bilibili.com/" target="_blank">Bilibili</a></div>
                 <div class="aa"><a href="https://www.bing.com/" target="_blank">必应搜索</a></div>
@@ -50,5 +45,16 @@
             </iframe>
         </div>
     </div>
+    <!-- 弹出视频 -->
+    <div class="modal-overlay" id="modalOverlay">
+        <div class="modal-content">
+          <button class="close-btn" id="closeBtn">&times;</button>
+          <video id="popupVideo" class="modal-video" controls>
+            <source src="https://rr.855955.xyz/j/j.mp4" type="video/mp4">
+            您的浏览器不支持 video 标签。
+          </video>
+        </div>
+      </div>
+      <script src="j/jj.js"></script>
 </body>
 </html>
