--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- <base target="_blank"> -->
     <link rel="stylesheet" media="screen and (min-width: 500px)" href="css/c1.css">
     <link rel="stylesheet" media="screen and (max-width: 499px)" href="css/c2.css">
-    <link rel="stylesheet" href="j/jj.css">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" href="j/j1.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" href="j/j2.css">
     
 
 </head>
@@ -16,6 +17,8 @@
     <div class="nav">
         <img src="image/head.jpg" alt="">
         <span class="title"><h3><a href="/" target="_self">ikun主页</a></h3></span>
+        <span class="spacer"></span>
+        <p><a href="javascript:void(0)" class="playBtn">点击唱跳Rap</a></p>
     </div>
     <!-- 版心 -->
     <div class="container">
@@ -26,7 +29,7 @@
                 <!-- 用户的头像 -->
                 <img src="image/kk.jpg" alt="">
                 <!-- 用户名 -->
-                <div class="aaa"><a href="javascript:void(0)" id="playBtn"><h3>点击唱跳Rap</h3></a></div>
+                <div class="aaa"><a href="javascript:void(0)" class="playBtn"><h3>点击唱跳Rap</h3></a></div>
                      <!-- 弹窗内容 -->
                 
                 <!-- 其它信息 -->
