--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <!-- <base target="_blank"> -->
     <link rel="stylesheet" media="screen and (min-width: 500px)" href="css/c1.css">
     <link rel="stylesheet" media="screen and (max-width: 499px)" href="css/c2.css">
-    <link rel="stylesheet" media="screen and (min-width: 500px)" href="j/j1.css">
-    <link rel="stylesheet" media="screen and (max-width: 499px)" href="j/j2.css">
-    
+    <link rel="stylesheet" href="j/jj.css">
 
 </head>
 <body>
