--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="image/head.jpg" alt="">
-        <span class="title"><h3><a href="/" target="_self">ikun主页</a></h3></span>
-        <span class="spacer"></span>
-        <p><a href="javascript:void(0)" class="playBtn">点击唱跳Rap</a></p>
+        <div class="title"><h3><a href="/" target="_self">ikun主页</a></h3></div>
+        <div class="spacer"></div>
+        <div class="ctrap"><p><a href="javascript:void(0)" class="playBtn">点击唱跳Rap</a></p></div>
     </div>
     <!-- 版心 -->
     <div class="container">
