--- a/html/sscs.html
+++ b/html/sscs.html
@@ -11,7 +11,7 @@
   <article id="content" class="markdown-body"></article>
   <script src="ghmd.js"></script>
   <script>
-    fetch('../file/base64.md')
+    fetch('../file/sscs.md')
       .then(res => res.text())
       .then(md => {document.getElementById('content').innerHTML = marked.parse(md);});
   </script>
