--- a/list.html
+++ b/list.html
@@ -2,28 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>ikun</title>
     <link rel="stylesheet" href="css/list.css">
+    <base target="_blank">
 </head>
 <body>
-    <a href="html/frp.html"><div class="blog">
-        <div class="title">FRP内网穿透</div>
-        <div class="date">一款开源免费的内外穿透工具</div>
-    </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
-    <a href="html/ssl.html"><div class="blog">
-        <div class="title">SSL证书</div>
-        <div class="date">给你的网站加上https，让访问更安全</div>
-    </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
-    <a href="html/ufw.html"><div class="blog">
-        <div class="title">UFW</div>
-        <div class="date">UFW是Ubuntu自带的防火墙，开启让你的服务器更加安全</div>
-    </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
-    <a href="html/base64.html"><div class="blog">
-        <div class="title">base64</div>
-        <div class="date">在Windows CMD中使用Base64编解码  </div>
+    <a href="https://hellogithub.com"><div class="blog">
+        <div class="title">HelloGitHub</div>
+        <div class="date">分享 GitHub 上有趣、入门级的开源项目。</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="html/tvbox.html"><div class="blog">
@@ -44,6 +30,16 @@
     <a href="html/xl7.html"><div class="blog">
         <div class="title">迅雷7纯净版</div>
         <div class="date">纯净，无广，下载不限速，体积轻巧</div>
+    </div></a>
+    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <a href="html/sscs.html"><div class="blog">
+        <div class="title">简单手速测试</div>
+        <div class="date">一个简洁的网页速度测试集合</div>
+    </div></a>
+    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <a href="html/w11qssz.html"><div class="blog">
+        <div class="title">Win10/11轻松设置</div>
+        <div class="date">Win11轻松设置</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
 </body>
