--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="image/head.jpg" alt="">
         <div class="title"><h3><a href="/" target="_self">ikun主页</a></h3></div>
         <div class="spacer"></div>
-        <div class="ctrap"><p><a href="javascript:void(0)" class="playBtn">点击唱跳Rap</a></p></div>
+        <a href="javascript:void(0)" class="playBtn"><div class="ctrap"><p>点击唱跳Rap</p></div></a>
     </div>
     <!-- 版心 -->
     <div class="container">
