--- a/html/xl7.html
+++ b/html/xl7.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ikun</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="ghmd.css">
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <base target="_blank">
