--- a/list.html
+++ b/list.html
@@ -7,6 +7,11 @@
     <base target="_blank">
 </head>
 <body>
+    <a href="https://search.bilibili.com/all?keyword=GitHub加速"><div class="blog">
+        <div class="title">GitHub打不开？</div>
+        <div class="date">点击搜索B站《GitHub加速》</div>
+    </div></a>
+    <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="https://hellogithub.com"><div class="blog">
         <div class="title">HelloGitHub</div>
         <div class="date">分享 GitHub 上有趣、入门级的开源项目。</div>
